project_ws/log/build_2025-08-11_18-46-51/location_controller/stderr.log
  File "/home/pablo-pc/GITHUB/TFG/project_ws/install/location_controller/lib/python3.10/site-packages/location_controller/location_module.py", line 347
    self.logging_data += 
                         ^
SyntaxError: invalid syntax

